--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "validation-builder",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "A simple but powerful validation builder for Node.js",
   "main": "index.js",
   "type": "module",
   "author": "@matheusinfo",
   "keywords": ["validation", "builder", "node", "js", "javascript"],
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matheusinfo/validation-builder"
+  }
 }
